--- a/src/automech/test/test.ipynb
+++ b/src/automech/test/test.ipynb
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d0ea49546cc41e7b29affae4ee6b5e6",
+       "model_id": "b67d5475395a4544a672178638edeae5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -92,7 +92,7 @@
        "│           ┆            ┆ (3)5-4/h4H        ┆      ┆        ┆ }                ┆ ull,null,1,4,1…  │\n",
        "│ CH2O3(82) ┆ OC(=O)O    ┆ AMChI=1/CH2O3/c2- ┆ 0    ┆ 0      ┆ {null,null,1,3,2 ┆ {100.0,5000.0,{n │\n",
        "│           ┆            ┆ 1(3)4/h3-4H       ┆      ┆        ┆ }                ┆ ull,null,1,3,2…  │\n",
-       "└───────────┴────────────┴───────────────────┴──────┴────────┴──────────────────┴──────────────────┘, thermo_temps=None)"
+       "└───────────┴────────────┴───────────────────┴──────┴────────┴──────────────────┴──────────────────┘)"
       ]
      },
      "execution_count": 2,
@@ -218,7 +218,8 @@
       "END\n",
       "\n",
       "\n",
-      "THERM\n",
+      "THERM ALL\n",
+      "    200.000  1000.000  5000.000\n",
       "\n",
       "N2                      N   2               G     200.0    6000.0  1000.0      1\n",
       " 2.95258000E+00 1.39690000E-03-4.92632000E-07 7.86010000E-11-4.60755000E-15    2\n",
